@@ -52,3 +52,4 @@
 - Fix: handle incorrect nested headers (H1 in output)
 - Fix: handle geo coordinates with missing levels of precision
 - Feature: Add support for Simple English Wikipedia
+- Fix: Added support for new media HTML structure. See: https://www.mediawiki.org/wiki/Parsoid/Parser_Unification/Media_structure/FAQ
